# roumail.github.io

./: .Rprofile  .bumpversion.cfg  .env  .flake8  .gitignore  .gitmodules  .last_body_md_sha  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  404.html  CHANGELOG.md  CNAME  README.md  _quarto.yml  application.css.map  application.d3329b53c97f0d8bea0216f0cc7d3f130dffe28b6dede49e357deaca36202fe0.js  body.md  bump_version.py  config.yaml  config.yaml.j2  draft_posts.md  go.mod  go.sum  index.html  index.json  index.xml  invoke.yaml  manifest.webmanifest  package-lock.json  package.hugo.json  package.json  pyproject.toml  release.py  robots.txt  sitemap.xml  vercel.json
.devcontainer/: .devcontainer.json
R/: build.R  build2.R
a-scraper-that-scales-part-i/: index.html
a-scraper-that-scales-part-ii/: index.html
about/: index.html  index.xml
analysis-paralysis/: index.html
archetypes/: default.md  drumming-blog.md  musings-blog.md  series.md  technology-blog.md
assets/: jsconfig.json
authors/: index.html  index.xml
blog/: index.html  index.xml
categories/: index.html  index.xml
contact/: index.html  index.xml
content/: _index.md  sitemap.md  tags.md
css/: wowchemy.f76b0c056129906c3efa1ca1d91f2d31.css
data/: author.yaml  page_sharer.toml  site.yaml
dockerfiles/: Dockerfile  Makefile  build_docker.sh  install_r_packages.R  run_docker_r_package_and_rstudio.sh
event/: index.html  index.xml
hello-world/: index.html
machine-learning/: index.html  index.xml
notes/: index.html  index.xml
personal-values-part-i/: index.html
(+346 files in other folders)
