[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "website"
version = "0.1.0"
description = "Automation and build tools for my website"
authors = ["Rohail Taimour"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.6.0"
