[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "website"
version = "0.1.0"
description = "Automation and build tools for my website"
authors = ["Rohail Taimour"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.6.0"
pyyaml = "^6.0.1"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

